--- a/css/reset.css
+++ b/css/reset.css
@@ -20,7 +20,7 @@ body {
           flex: 1 0 auto; }
 
 .footer {
-  -webkit-box-flex: 0;
+  -webkit-box-flex: 0 auto;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto; }
 
