--- a/wp-content/themes/mesmerize/style.css
+++ b/wp-content/themes/mesmerize/style.css
@@ -19,7 +19,7 @@ h3 {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Geneva, Arial, Helvetica, sans-serif;
 }
 
 figure {
@@ -33,6 +33,7 @@ Header
 
 .header {
   height: 171px;
+  padding: 0 10px;
 }
 
 .header._s {
@@ -56,6 +57,12 @@ Header
   flex-grow: 1;
 }
 
+.header-c__item._right {
+  line-height: 120px;
+  font-size: 24px;
+  text-align: center;
+}
+
 .header-c__logo {
   width: 200px;
 }
@@ -65,6 +72,7 @@ Header
   font-weight: 400;
   text-transform: uppercase;
   margin-top: 45px;
+  color: #777777;
 }
 
 .header-c__link {
@@ -200,28 +208,27 @@ Main
 
 .swiper-slide__img {
   width: 100%;
+  display:block;
 }
+
+.swiper-slide__img._lamp {
+  height: 270px;
+}
+
 .swiper-slide__img._jumb {
   height: auto;
+  min-height: 200px;
   margin-bottom: -18%;
 }
 
 .main__caption {
   position: relative;
-  height: 130px;
+  min-height: 130px;
   padding-top: 50px;
   font-size: 30px;
   font-weight: 400;
   box-sizing: border-box;
-}
-
-.main__caption._jumb {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  color: #e7e7e7;
-  text-shadow: -1px 1px 5px #00ae5d;
+  color: #777777;
 }
 
 .main__caption._bubbles::before,
@@ -252,7 +259,7 @@ Main
 }
 
 .main__caption._line::before,
-.main__caption._line::after{
+.main__caption._line::after {
   width: 145px;
   height: 2px;
 }
@@ -293,6 +300,8 @@ Main
   padding: 40px 20px 20px 20px;
   box-sizing: border-box;
   background-color: #fbfbfb;
+  font-weight: 700;
+  color: #777777;
 }
 
 .advantages__item::before {
@@ -308,27 +317,27 @@ Main
 }
 
 .advantages__item._years::before {
-  background-image: url('../img/5-let.png');
+  background-image: url('../../uploads/5-let.png');
 }
 
 .advantages__item._command::before {
-  background-image: url('../img/professionali.png');
+  background-image: url('../../uploads/professionali.png');
 }
 
 .advantages__item._materials::before {
-  background-image: url('../img/bezopasnost.png');
+  background-image: url('../../uploads/bezopasnost.png');
 }
 
 .advantages__item._terms::before {
-  background-image: url('../img/sroki.png');
+  background-image: url('../../uploads/sroki.png');
 }
 
 .advantages__item._discounts::before {
-  background-image: url('../img/skidki.png');
+  background-image: url('../../uploads/skidki.png');
 }
 
 .advantages__item._work::before {
-  background-image: url('../img/assortiment.png');
+  background-image: url('../../uploads/assortiment.png');
 }
 
 .full-box {
@@ -340,6 +349,10 @@ Main
   cursor: pointer;
 }
 
+.swiper-slide__btn-v {
+  position: relative;
+}
+
 .swiper-slide__btn-v:hover::before {
   display: block;
   position: absolute;
@@ -349,9 +362,9 @@ Main
   background-color: rgba(0, 174, 93, 0.8);
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   border-radius: 5px;
 }
 
@@ -366,9 +379,9 @@ Main
   border-radius: 80% 20%;
   left: 37%;
   top: 50%;
-  -webkit-transform: translate(-50%,-50%) rotate(45deg);
-  -ms-transform: translate(-50%,-50%) rotate(45deg);
-  transform: translate(-50%,-60%) rotate(45deg);
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+  -ms-transform: translate(-50%, -50%) rotate(45deg);
+  transform: translate(-50%, -60%) rotate(45deg);
   border-width: 2px 1px 1px 2px;
   height: 28px;
   width: 28px;
@@ -380,9 +393,9 @@ Main
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   border-radius: 50%;
   box-shadow: 0 -3px 0 3px inset;
   height: 11px;
@@ -398,7 +411,14 @@ Main
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
-  background-color: 
+}
+
+.lamp-slider {
+  padding-bottom: 30px;
+}
+
+.swiper-slide figure {
+  width: 100%;
 }
 
 .swiper-slide__img {
@@ -411,14 +431,222 @@ Main
 
 .technology-slider {
   cursor: pointer;
+  padding-bottom: 30px;
 }
 
 .swiper-slide._technology {
   width: 400px;
+  box-shadow: 2px 2px 5px #cdcdcd;
+  color: #777777;
+  padding-bottom: 20px;
+}
+
+.swiper-slide__img._technology {
+  width: 400px;
+}
+
+.invoices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  text-align: center;
+  color: #777777;
+}
+
+.invoices__item {
+  max-width: 360px;
+  margin: 0 10px 30px 10px;
+  cursor: pointer;
+}
+
+
+.swiper-slide._lamp,
+.invoices__item {
+  max-width: 360px;
+  box-shadow: 2px 2px 5px #cdcdcd;
+  color: #777777;
+  padding-bottom: 20px;
+}
+
+.invoices__item {
+  overflow: hidden;
+}
+
+.swiper-slide__img-c,
+.invoices__img-c {
+  height: 45px;
+  line-height: 45px;
+  font-size: 20px;
+}
+
+.swiper-slide__price,
+.invoices__price {
+	display: none;
+  width: 250px;
+  height: 35px;
+  line-height: 31px;
+  border: 2px solid #00ae5d;
+  margin: 0 auto;
+  box-sizing: border-box;
+  font-weight: 700;
+}
+
+.invoices__img {
+  width: 100%;
+  height: 270px;
 }
 
 .main-container._question {
-  height: 380px;
+  padding-bottom: 80px;
+  box-sizing: border-box;
+}
+
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #777777;
+}
+
+.contacts__info {
+  flex-grow: 1;
+  min-width: 475px;
+}
+
+.contacts__text {
+  font-size: 14px;
+  margin: 20px 10px 10px 10px;
+}
+
+.contacts__text._first {
+  margin-top: 0;
+}
+
+.contacts__mail {
+  font-weight: 700;
+}
+
+.contacts__address {
+  font-weight: 700;
+}
+
+.feedback {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: 1px solid #dadada;
+  max-width: 850px;
+  min-height: 165px;
+  margin: 0 auto;
+  padding: 25px 0 15px 0;
+  background-color: #fbfbfb;
+  box-sizing: border-box;
+  color: #777777;
+}
+
+.feedback__item {
+  width: 240px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.feedback__text {
+  font-size: 20px;
+}
+
+.feedback__tel {
+  display: inline-block;
+  text-decoration: none;
+  color: #777777;
+  line-height: 50px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.feedback__tel._contacts {
+  line-height: normal;
+}
+
+.feedback__input {
+  width: 100%;
+  line-height: 30px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 1px solid #dbdbdb;
+  color: #000;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.feedback__input::-webkit-input-placeholder {
+  color: #cdcdcd;
+}
+
+.feedback__input::-moz-placeholder {
+  color: #cdcdcd;
+}
+
+.feedback__input:-moz-placeholder {
+  color: #cdcdcd;
+}
+
+.feedback__input:-ms-input-placeholder {
+  color: #cdcdcd;
+}
+
+.feedback__call {
+  margin-left: 0px;
+  text-align: center;
+  line-height: 19px;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.feedback__button {
+  outline: none;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  border-width: 0 0 3px 0;
+  border-bottom-color: #41ef00;
+  box-sizing: border-box;
+  background-color: #76c859;
+  color: #fff;
+  cursor: pointer;
+}
+
+.feedback__button:active {
+  border-bottom: 0;
+}
+
+.guarantee,
+.contacts__box {
+  padding: 15px 10px;
+  background-color: #fbfbfb;
+  box-sizing: border-box;
+  border: 1px solid #dadada;
+  border-bottom: 3px solid #00ae5d;
+  margin: 0 10px 30px 10px;
+}
+
+.contacts__box {
+  margin-bottom: 0;
+  min-height: 350px;
+}
+
+.guarantee p {
+  margin: 15px 0;
 }
 
 .main__map {
@@ -456,7 +684,7 @@ Main
   box-sizing: border-box;
   width: 40px;
   height: 40px;
-  background-image: url(../img/close.png);
+  background-image: url(../../uploads/close.png);
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -498,40 +726,90 @@ Footer
 */
 
 .footer {
-  height: 130px;
+  height: 50px;
 }
 
 .footer._s {
   background-color: #fbfbfb;
 }
 
-.menu-footer {
-  position: relative;
-  list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
-
-  display: none;
-}
-
-.menu-footer__item {
-  position: relative;
-  display: inline-flex;
-  height: 50px;
-  width: 100%;
-}
-
-.menu-footer__link {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  text-decoration: none;
+.footer-container {
   line-height: 50px;
-  font-size: 20px;
-  color: #000;
+  text-align: center;
 }
 
-.menu-footer__link:hover {
-  color: #73c847;
+@media (max-width: 991px) {
+  .header {
+    position: fixed;
+    z-index: 50;
+    width: 100%;
+    height: 54px;
+    overflow: hidden;
+    background-color: #fff;
+  }
+  
+  .header-c__logo {
+    margin-top: -45px;
+  }
+  
+  .header-c__item._right {
+    line-height: 50px;
+  }
+
+  .header-c__item._center {
+    display: none;
+  }
+  
+  .nav {
+    height: 50px;
+  }
+
+  .menu-top {
+    position: fixed;
+    margin: 0;
+    top: 0;
+    display: none;
+  }
+
+  .main__caption._bubbles::before,
+  .main__caption._bubbles::after,
+  .main__caption._line::before,
+  .main__caption._line::after {
+    display: none;
+  }
+
+  .img-view._active .img-view__box {
+    margin: 10px;
+  }
+	
+	.contacts__info {
+		margin-bottom: 10px;
+	}
 }
+
+@media (max-width: 767px) {
+  .contacts__info {
+    min-width: 0;
+  }
+  
+  .contacts__map {
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .contacts__box {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 482px) {
+  .header-c__item._left {
+    display: none;
+  }
+}
+
+@media (max-width: 320px) {}
