--- a/wp-content/themes/mesmerize/style.css
+++ b/wp-content/themes/mesmerize/style.css
@@ -1,3 +1,76 @@
+.jumbotron {
+  min-height: 550px;
+}
+
+.calculator {
+  max-width: 500px;
+  margin: 0 auto 20px;
+  padding: 15px;
+  text-align: right;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #5c5c5c;
+  border: 3px dotted #00ae5d;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px 0px #fff;
+  box-sizing: border-box;
+}
+
+.calculator._top {
+  position: absolute;
+  z-index: 100;
+  left: 35%;
+  right: 0;
+  margin: -50px auto 0;
+  transform: translateY(-100%);
+}
+
+.calculator__caption {
+  text-align: left;
+  margin: 0;
+}
+
+.calculator__radio {
+  position: absolute;
+  right: 60px;
+  transform: translateX(100%);
+}
+
+.calculator__box {
+  margin-top: 10px;
+  border-top: 1px solid #00ae5d;
+  box-sizing: border-box;
+}
+
+.calculator__caption-box {
+  text-align: left;
+  padding: 5px 0;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+
+.calculator__label {
+  position: relative;
+  display: block;
+  padding: 5px 110px 5px 0;
+}
+
+.calculator__input {
+  position: absolute;
+  right: 0;
+  width: 100px;
+  text-align: center;
+}
+
+.calculator__price {
+  margin-top: 10px;
+  padding-top: 10px;
+  text-align: left;
+  font-size: 24px;
+  font-weight: bold;
+  border-top: 1px solid #00ae5d;
+  box-sizing: border-box;
+}
+
 /*
 ----------------------------------------------------------------------
 Main
@@ -651,6 +724,13 @@ Footer
 
   .contacts__info {
     margin-bottom: 10px;
+  }
+  
+  .calculator._top {
+    position: relative;
+    left: 0;
+    margin-top: 20px;
+    transform: translateY(0);
   }
 }
 
